# roughtime_cpp

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  install.sh  test.sh
.github/workflows/: ci.yml
client/src/: client.cpp  main.cpp
deployment/: README.md  roughtime-server.service
docs/: ARCHITECTURE.md
examples/: basic_client.cpp  servers.json
include/roughtime/: client.h  config.h  crypto.h  openssl_wrappers.h  protocol.h  rate_limiter.h  server.h  util.h  validation.h
local_servers/: client_config.json  server1.json  server2.json  server3.json
scripts/: README.md  build-coverage.sh  build-sanitizers.sh  generate-docs.sh  run_local_servers.sh
server/src/: main.cpp  server.cpp
src/: config.cpp  crypto.cpp  keygen_tool.cpp  protocol.cpp
tests/: CMakeLists.txt  causal_ordering_test.cpp  client_integration_test.cpp  crypto_test.cpp  grease_test.cpp  protocol_test.cpp  rogue_server_test.cpp  security_test.cpp  server_integration_test.cpp  server_performance_test.cpp  test_utils.h
